--- a/index.html
+++ b/index.html
@@ -119,7 +119,10 @@ body {font-size:16px;}
     </ul><br>
     For my accompanying graphs, it is easily apparent that the colors are very different from those next to them.  Another great feature
     of my visualizations is that by hovering over any part, the viewer can see the label and the data point.
-    This feature is useful for anyone who has trouble differentiating between colors on a webpage.
+    This feature is useful for anyone who has trouble differentiating between colors on a webpage.<br><br>
+    With that in mind, I did run my webpage through this <a href="https://www.toptal.com/designers/colorfilter">Colorblind Web Page Filter</a>
+    and was happy with the results.  As I mentioned above, the interactive visualizations with the helpful tooltips will be really nice for those
+    who could use it.
     <h3>Answered Questions</h3>
     One of my first thoughts when I began this project was which age group suffered the most loss due to this pandemic?
     Naturally, one would assume the elderly and the young, but I thought because of the manner in which 11-20
@@ -171,6 +174,8 @@ function onClick(element) {
 
 <script>
     // CREATING MY STREET MAP
+    // ALL OF THE CODE BELOW IS MY ORIGINAL CODE FOR CREATING THE STREET MAP. AS I EXPLAINED IN THE VIDEO, IT ULTIMATELY DID NOT WORK WITH
+    // MY CHART.JS VISUALIZATIONS, WHICH IS WHY I INCLUDED THE JPG.
     // ------------------------------------------------------
         d3.json("streets.json", function (data) {
 
